value-dev endpoints and grpc client for business service
